<resources>
    <string name="app_name">Kahakish</string>

    <string name="splash_app_name"><font size="11">KA AKISH</font></string>

    <string name="onboarding_signup"><font size="14">Registration</font></string>
    <string name="onboarding_signin"><font size="14">Log In</font></string>

    <string name="registration_title"><font size="24">CREATE ACCOUNT</font></string>
    <string name="registration_account"><font size="18"> YOUR ACCOUNT</font></string>
    <string name="name_hint"><font size="6">Name</font></string>
    <string name="email_hint"><font size="6">Email Address</font></string>
    <string name="pass_hint"><font size="6">Password</font></string>
    <string name="confirmpass_hint"><font size="6">Confirm Password</font></string>
    <string name="follow_signup">By tapping <b>Sign Up</b> you agree to the</string>
    <string name="alreadyhaveaccount">Already have an account?</string>

    <string name="terms_link"><u>terms &amp; conditions</u></string>
    <string name="siginhaveaccount"><u> Sign In</u></string>
    <string name="signup"><font size="14">Create New Account</font></string>

    <string name="social"><font size="14">Or login using scoial media</font></string>



    <string name="firstbannertext"><font size="16"><b>Kick up the</b>\n</font><font size="42"><b>COOL\n</b></font><font size="14">Adidas Shoes</font></string>

    <string name="firstbannershopnow"><font size="12"><u><b>SHOP NOW</b></u></font></string>



    <string name="empty_field_error"><font size="14">Empty Field</font></string>

    <string name="topItems"><font size="18"><b>Top Categories</b></font></string>
    <string name="showAll"><font size="14">Show All</font></string>


    <string name="slide1_title"><font size="21">Explore Products</font></string>
    <string name="slide1_dots"><font size="14">Explore thousands of products\nand start shopping</font></string>

    <string name="slide2_title"><font size="21">Make Payment</font></string>
    <string name="slide2_dots"><font size="14">Up to ten plus options\nof payments</font></string>

    <string name="slide3_title"><font size="21">Enjoy Shopping</font></string>
    <string name="slide3_dots"><font size="14">Get high quality products\nwith reasonable prices</font></string>

    <string name="forgetPass"><font size="14">Forget Password</font></string>
    <string name="showPass"><font size="14">Show Password</font></string>

    <string name="tapone">Home</string>
    <string name="taptwo">Category</string>
    <string name="tapthree">Brand</string>
    <string name="tapfour">Cart</string>
    <string name="tapfive">Account</string>

    <string name="title_activity_main">main</string>

    <string name="title_activity_home2">home2</string>
    <string name="title_activity_home_screen">home_screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="terms_title">Terms And Conditions</string>
    <string name="terms_conditions">1. The Intellectual Property disclosure will inform users that the contents, logo and other visual media you created is your property and is protected by copyright laws.\n\n
2. A Termination clause will inform that users’ accounts on your website and mobile app or users’ access to your website and mobile (if users can’t have an account with you) can be terminated in case of abuses or at your sole discretion.\n\n
3. A Governing Law will inform users which laws govern the agreement. This should the country in which your company is headquartered or the country from which you operate your website and mobile app.\n\n
4. A Links To Other Web Sites clause will inform users that you are not responsible for any third party websites that you link to. This kind of clause will generally inform users that they are responsible for reading and agreeing (or disagreeing) with the Terms and Conditions or Privacy Policies of these third parties.\n\n
5. If your website or mobile app allows users to create content and make that content public to other users, a Content section will inform users that they own the rights to the content they have created.The “Content” clause usually mentions that users must give you (the website or mobile app developer) a license so that you can share this content on your website/mobile app and to make it available to other users.Because the content created by users is public to other users, a DMCA notice clause (or Copyright Infringement ) section is helpful to inform users and copyright authors that, if any content is found to be a copyright infringement, you will respond to any DMCA takedown notices received and you will take down the content.\n\n
6. A Limit What Users Can Do clause can inform users that by agreeing to use your service, they’re also agreeing to not do certain things. This can be part of a very long and thorough list in your Terms and Conditions agreements so as to encompass the most amount of negative uses. Here’s how 500px lists its prohibited activities:\n</string>
    <string name="title_activity_log">log</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="title_activity_side_menu_user">sideMenuUser</string>

    <string name="banner_title"><font size="21"></font></string>
    <string name="banner_desc"><font size="12"></font></string>

    <string name="facebook_app_id">1080108828817160</string>
    <string name = "fb_login_protocol_scheme" > fb1080108828817160 </string>
    <string name="label_fragment_login_sign_in_with_facebook" >Login with Facebook</string>


</resources>
