<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="vertical"
        android:gravity="top|center"
        >

        <LinearLayout
            android:id="@+id/backReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:gravity="start"
            >

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_backspace_black_24dp"
                android:layout_marginStart="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"

            >


             <TextView
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_title"
                android:textColor="@color/screen_Title"
                android:layout_marginTop="25dp"
                android:layout_marginStart="45dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/midBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.70"
        android:orientation="vertical"
        android:gravity="top|center"
        android:layout_below="@id/titleBar"
        >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/field_hint"

        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="5dp"
            android:textColor="@color/field_text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/field_hint"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:textColor="@color/field_text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/field_hint"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/passT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_hint"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:textColor="@color/field_text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPassLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/field_hint"

        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirmPassT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmpass_hint"
            android:inputType="textPassword"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:textColor="@color/field_text"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/byTapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/follow_signup"
        android:text="@string/follow_signup"
        android:layout_marginTop="5dp"
       />

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_link"
        android:textColor="@color/terms_condition"
    />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:background="@drawable/round_button"
            android:text="@string/signup"
            android:textColor="@color/field_hint"
            android:layout_marginTop="15dp"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>



</LinearLayout>
