<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kahakish.shopping.com.kahakish.login">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/resetPasswordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="#999999"
        android:visibility="gone"
        app:hintTextAppearance="@style/MyAppearance"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/resetPasswordT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:textColor="@color/colorPrimaryDark"
            />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_keyboard_backspace_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintVertical_bias="0.01" />


    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textColor="#999999"
        android:textSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.5"

        />

    <TextView
        android:id="@+id/toTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TO"
        android:textColor="#999999"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="YOUR ACOUNT"
        android:textColor="#999999"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTxt"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="#999999"
        app:hintTextAppearance="@style/MyAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:textColor="@color/colorPrimaryDark"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="#999999"
        app:hintTextAppearance="@style/MyAppearance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/passT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_hint"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:textColor="@color/colorPrimaryDark"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/showPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showPass"
        android:textColor="#FF6347"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLayout"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPass"
        android:textColor="#666666"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/showPass"
        app:layout_constraintTop_toBottomOf="@+id/passLayout"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.65"
        />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
